k8s/notification-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: mazen24862/notification-service:latest
          ports:
            - containerPort: 3004
          resources:
            limits:
              cpu: "200m"
              memory: "160Mi"
            requests:
              cpu: "100m"
              memory: "96Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: ClusterIP
