k8s/report-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  labels:
    app: report-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-service
  template:
    metadata:
      labels:
        app: report-service
    spec:
      containers:
        - name: report-service
          image: mazen24862/report-service:latest
          ports:
            - containerPort: 3003
          resources:
            limits:
              cpu: "200m"
              memory: "160Mi"
            requests:
              cpu: "100m"
              memory: "96Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  selector:
    app: report-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
