k8s/user-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: bishoysedra/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "200m"
              memory: "160Mi"
            requests:
              cpu: "100m"
              memory: "96Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
