k8s/apis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: instapay.local
    http:
      paths:
      - path: /user(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 3001
      - path: /transaction(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: transaction-service
            port:
              number: 3002
      - path: /report(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: report-service
            port:
              number: 3003
      - path: /notification(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification-service
            port:
              number: 3004
